# cAT

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  changelog.txt
.github/workflows/: build_cmake.yml  codeql-analysis.yml
example/: basic.c  demo.c  example.c  main.c  spi.c  unsolicited.c
src/: cat.c  cat.h  cat_command.h  cat_common.h  cat_host.h  cat_usrdata.c  cat_usrdata.h  cat_variable.h
tests/: test_cmd_list.c  test_hold_state.c  test_implicit_write.c  test_mutex.c  test_order.c  test_parse.c  test_read.c  test_read_args.c  test_return_read.c  test_return_run.c  test_return_test.c  test_return_write.c  test_run.c  test_search_cmd.c  test_shortcuts.c  test_test.c  test_test_args.c  test_test_only.c  test_unsolicited_read.c  test_unsolicited_read_buffer.c  test_unsolicited_read_stress.c  test_unsolicited_test.c  test_var_access.c  test_write.c  test_write_hex_buffer.c  test_write_hex_range.c  test_write_int_range.c  test_write_parse.c  test_write_string_buffer.c  test_write_uhex.c  test_write_uint_range.c  test_write_var_dec.c
